# fyi-technical_test-clock

./: CMakeLists.txt  Main.qml  README  main.cpp
